slow scroll enabled
not yet dynamic to pane break margins

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<div id="content-strip">
         <div class="pane-break"></div>
         <div class="content" id="about">
+            <h2>joe sogard</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur ex at mi euismod, sit amet ornare leo lacinia. Duis quis massa lacinia, iaculis mi in, tempus massa. Aenean ut dictum enim, vitae pulvinar leo. Fusce et volutpat risus. Vestibulum porttitor facilisis luctus. Proin in suscipit ex. Aenean eu posuere neque. Nam ullamcorper orci neque, egestas accumsan dolor ultricies nec.</p>
         </div>
         <div class="pane-break"></div>
         <div class="content" id="skills">
