--- a/index.html
+++ b/index.html
@@ -30,7 +30,56 @@
         </div>
         <div class="pane-break"></div>
         <div class="content" id="experience">
-            <h2>professional experience</h2>
+            <div class="job">
+                
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'>App Dev + Full-Stack Web Dev Intern</h3>
+                        <h4 class='company'>Principal Financial Group</h4>
+                        <p class='timespan'>May 2017 - August 2017</p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/pfg.png" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p>Participated in a 40-hour company-sponsored Hackathon with intern team to develop a machine learning algorithm in conjunction with a fully functioning web app. This software is used to predict the potential risk factors of any given open source software the company may want to download. This app was 'commissioned' by the CTO and my team developed it further throughout the rest of the summer.</p>
+                    <p>Collaborated with an intern-only team research, plan, and execute the full stack development of an in-house web app. This app is used to track the status of every one of the company's servers.</p>
+                    <p>Fully developed the back-end of an enterprise-wide web app that tracks the registration and various corporate restrictions of individuals for any manner of company events.</p>
+                </div>
+            </div>
+            <div class="job">
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'>Automated QA Test Development Intern</h3>
+                        <h4 class='company'>Xpanxion LLC</h4>
+                        <p class='timespan'>October 2017 - May 2017</p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/xpanxion.png" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p>Worked with head Quality Assurance Dev on contract work using Java-Selenium to develop several automated tests for an online Point-of-Sale system. Regularly participated in Agile ceremonies such as daily stand-ups.</p>
+                </div>
+            </div>
+            <!--
+            <div class="job">
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'></h3>
+                        <h4 class='company'></h4>
+                        <p class='timespan'></p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/#" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p></p>
+                </div>
+            </div>
+            -->
         </div>
         <div class="pane-break"></div>
         <div class="content" id="contact">
