--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="nav-bar">
         <table>
             <tr>
+                <td>
+                    <a href="Resume.pdf">resume</a>
+                </td>
             </tr>
         </table>
     </div>
@@ -20,14 +23,14 @@
         <div class="pane-break"></div>
         <div class="content" id="about">
             <h2>joe sogard</h2>
-            <p>Joe is currently a student at Iowa State University anticipates <b>graduation in May 2018</b>. He is studying <b>Software Engineering</b> and has had <b>relevant internships</b> and other jobs since his Sophomore year in 2015. In school he participates in many clubs as the Treasurer of <b>Digital Women</b>, a head co-organizer of <b>HackISU</b> and Digital Women: Code Jam, and a participant of many other clubs at ISU.</p>
+            <p>Joe is currently a student at Iowa State University anticipates <b>graduation in May 2018</b>. He is studying <b>Software Engineering</b> and has had <b>relevant internships</b> and other jobs since his Sophomore year. In school he participates in many clubs as the Treasurer of <b>Digital Women</b>, a head co-organizer of <b>HackISU</b> and Digital Women: Code Jam, and a participant of many other clubs at ISU.</p>
             <p>After graduation Joe is looking for a full-time Software Engineering job in the Midwest, the Pacific NorthWest, or even Canada. Professionally, he is interested in a job that challenges him and grows his technical skillset. Specifically, he wants to work in <b>full-stack</b> or <b>back-end web development</b> or <b>application development</b> but he's open to nearly anything else in the software development field</p>
             <p>Joe grew up in Edina, a suburb near Minneapolis, Minnesota. Growing up he joined the Boy Scouts of America, which established his love for camping and the outdoors. Ever since acheiving the rank of Eagle Scout he has gone on a week-long backpacking trip with his close friends on the north shore of Minnesota. In his free time he mainly enjoys hanging out with friends, running, knitting, and working on side programming projects.</p>
         </div>
         <div class="pane-break"></div>
-        <div class="content" id="skills">
+        <!--<div class="content" id="skills">
             <h2>technical skills</h2>
-        </div>
+        </div>-->
         <div class="pane-break"></div>
         <div class="content" id="experience">
             <div class="job">
@@ -61,6 +64,36 @@
                 </div>
                 <div class='desc'>
                     <p>Worked with head Quality Assurance Dev on contract work using Java-Selenium to develop several automated tests for an online Point-of-Sale system. Regularly participated in Agile ceremonies such as daily stand-ups.</p>
+                </div>
+            </div>
+            <div class="job">
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'>Systems Analyst Intern</h3>
+                        <h4 class='company'>UnitedHealth Group - Optum</h4>
+                        <p class='timespan'>June 2016 - August 2016</p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/uhg.png" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p>Shadowed various mentors throughout team, learning about common business tech practices and Agile methodologies. Worked with a team of interns to research and present a solution for team collaboration software still in use on the team today.</p>
+                </div>
+            </div>
+            <div class="job">
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'>Computer Science Teacher's Assistant</h3>
+                        <h4 class='company'>Iowa State University - Computer Science Dept.</h4>
+                        <p class='timespan'>January 2016 - May 2016</p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/isu.jpg" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p></p>
                 </div>
             </div>
             <!--
