comment break; add padding to nav, end of content; add actual pic of me

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
     </div>
-    <img src="./placeholder.jpg"
+    <img src="./img/big/family_wedding_short.jpg"
          id="big-picture"/>
     
 	<div id="content-strip">
@@ -30,8 +30,8 @@
         <div class="pane-break"></div>
         <!--<div class="content" id="skills">
             <h2>technical skills</h2>
-        </div>-->
-        <div class="pane-break"></div>
+        </div>
+        <div class="pane-break"></div>-->
         <div class="content" id="experience">
             <div class="job">
                 
