add collage feature for big image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>Joe Sogard</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="./script.js"></script>
+	<script type="text/javascript" src="collage.js"></script>
 </head>
 <body>
 <div id="background">
@@ -21,8 +25,7 @@
             </tr>
         </table>
     </div>
-    <img src="./img/big/family_wedding_short.jpg"
-         id="big-picture"/>
+    <div id="collage"/>
     
 	<div id="content-strip">
         
@@ -174,7 +177,4 @@
 </div>
 
 </body>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="./script.js"></script>
 </html>
