--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </tr>
         </table>
     </div>
-    <div id="collage"/>
+    <!--<div id="collage"/>-->
     
 	<div id="content-strip">
         
