separate page for portfolio class; add gen ed requirement

--- a/se494.html
+++ b/se494.html
@@ -87,6 +87,31 @@
             </div>
         </div>
         <div class="pane-break"></div>
+		
+		<!-- PORTFOLIO: GEN EDS -->
+		<div class="content" id="non-technical">
+			<!--
+			<div class="gen-ed">
+                <h3>CLASS TITLE</h3>
+                <p>CLASS DESCRIPTION</p>
+            </div>
+			-->
+			<h2>NON-TECHNICAL COURSEWORK</h2>
+			<p>My goals for the future of my career are not only technical, of course. I'm not just a code monkey, so being well rounded with all my non-technical skills is greatly important to me. It is very important to me that in the future I have a diverse environment that stimulates me not only technically but also within my other interests. That's why I have taken the General Education classes I have:</p>
+			<div class="gen-ed">
+                <h3>Intro to World Religions</h3>
+                <p>STEM fields especially are not particularly diverse. This is unfortunate, but it encourages me as a member of that community to be welcoming and open to anybody that is not culturally similar to me, so they feel comfortable in this white male-dominated field. One way I have tried to expand my cultural awareness is by taking my school's <i>Intro to World Religions</i> class. This class has taught me many things about other diverse cultures that I will likely encounter in my future careers.</p>
+            </div>
+			<div class="gen-ed">
+                <h3>The Holocaust</h3>
+                <p>As odd as it sounds, my school's German History class - <i>The Holocaust</i> - is my favorite class I have taken. I have alwasy been interested in history and the amount of passion that the professor of this class had regarding the topic of the holocaust was infectious. I feel it is very important to have interests in subject matter that is not related to your career so that you are not constantly in work-mode and have a more well-rounded personality. This is why I felt it was important to take a class like this to satisfy my history interest.</p>
+            </div>
+			<div class="gen-ed">
+                <h3>Beer, Wine, &amp; Spirits</h3>
+                <p>Even though The Holocaust history class was my favorite course taken at ISU, obviously it was a huge downer and not fun to learn about. My most fun class that I have taken at my school has to be the hospitality class, <i>Intro to Beer, Wine, &amp; Spirits</i> for obvious reasons. Every week we would spend the first hour of class learning about the intricacies and differences between various beers, wines, and spirits, then during the last hour of the class we would pour our glasses and be able to taste and experience the differences ourselves! I feel this is actually an important class to take, because it really teaches you how to have fun in a professional setting.</p>
+            </div>
+		</div>
+		<div class="pane-break"></div>
         
 		<!-- JOB EXPERIENCE -->
         <div class="content" id="experience">
