fix opaque bw background company logos

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
         
 		<!-- JOB EXPERIENCE -->
         <div class="content" id="experience">
-            <div class="job" >
-                <div class="bgpic" style="background-image: url(img/pfg_bw.png);">
-				</div>
+            <div class="job bglogo" style="background-image: url(img/pfg_opac.png)">
                 <div class='job-about'>
                     <div class='job-stats'>
                         <h3 class='title'>App Dev + Full-Stack Web Dev Intern</h3>
@@ -118,7 +116,7 @@
                     <p>Fully developed the back-end of an enterprise-wide web app that tracks the registration and various corporate restrictions of individuals for any manner of company events.</p>
                 </div>
             </div>
-            <div class="job">
+            <div class="job bglogo" style="background-image: url(img/xpanxion_opac.png)">
                 <div class='job-about'>
                     <div class='job-stats'>
                         <h3 class='title'>Automated QA Test Development Intern</h3>
@@ -133,7 +131,7 @@
                     <p>Worked with head Quality Assurance Dev on contract work using Java-Selenium to develop several automated tests for an online Point-of-Sale system. Regularly participated in Agile ceremonies such as daily stand-ups.</p>
                 </div>
             </div>
-            <div class="job">
+            <div class="job bglogo" style="background-image: url(img/optum_opac_small.png)">
                 <div class='job-about'>
                     <div class='job-stats'>
                         <h3 class='title'>Systems Analyst Intern</h3>
@@ -148,7 +146,7 @@
                     <p>Shadowed various mentors throughout team, learning about common business tech practices and Agile methodologies. Worked with a team of interns to research and present a solution for team collaboration software still in use on the team today.</p>
                 </div>
             </div>
-            <div class="job">
+            <div class="job bglogo" style="background-image: url(img/isu_opac.png)">
                 <div class='job-about'>
                     <div class='job-stats'>
                         <h3 class='title'>Computer Science Teacher's Assistant</h3>
@@ -191,7 +189,8 @@
             <a href="https://www.facebook.com/joey.sogard"><img src="/img/qr-fb.png"></a>
             <!-- qr codes generated at https://www.qrcode-monkey.com -->
         </div>
-        
+        <div id="test">
+		</div>
 	</div>
 </div>
 
