add alpha to qr codes

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 		
 		<!-- CONTACT INFO -->
         <div class="content" id="contact">
-            <a href="https://github.com/jsogard"><img src="/img/qr-git.png"></a>
-            <a href="https://www.linkedin.com/in/joe-sogard-bb8323b2/"><img src="/img/qr-linkedin.png"></a>
-            <a href="mailto:jmsogard@gmail.com"><img src="/img/qr-email.png"></a>
-            <a href="https://www.facebook.com/joey.sogard"><img src="/img/qr-fb.png"></a>
+            <a href="https://github.com/jsogard"><img src="/img/qr-git_opac.png"></a>
+            <a href="https://www.linkedin.com/in/joe-sogard-bb8323b2/"><img src="/img/qr-linkedin_opac.png"></a>
+            <a href="mailto:jmsogard@gmail.com"><img src="/img/qr-email_opac.png"></a>
+            <a href="https://www.facebook.com/joey.sogard"><img src="/img/qr-fb_opac.png"></a>
             <!-- qr codes generated at https://www.qrcode-monkey.com -->
         </div>
         <div id="test">
