add content to previous jobs; reintegrate small company logo

--- a/index.html
+++ b/index.html
@@ -104,11 +104,9 @@
                         <h4 class='company'>Principal Financial Group</h4>
                         <p class='timespan'>May 2017 - August 2017</p>
                     </div>
-<!--
                     <div class='job-logo-div'>
-                        <img src="/img/bw_pfg.png" class='logo' style="height:90px;">
+                        <img src="/img/pfg.png" class='logo' style="height:90px;">
                     </div>
--->
                 </div>
                 <div class='desc'>
                     <p>Participated in a 40-hour company-sponsored Hackathon with intern team to develop a machine learning algorithm in conjunction with a fully functioning web app. This software is used to predict the potential risk factors of any given open source software the company may want to download. This app was 'commissioned' by the CTO and my team developed it further throughout the rest of the summer.</p>
@@ -129,6 +127,7 @@
                 </div>
                 <div class='desc'>
                     <p>Worked with head Quality Assurance Dev on contract work using Java-Selenium to develop several automated tests for an online Point-of-Sale system. Regularly participated in Agile ceremonies such as daily stand-ups.</p>
+					<p>Took on responsibilities of otherwise indisposed coworkers to improve the efficiency of automated test creation. Dynamically changed automated test formats to adapt to new requirements.</p>
                 </div>
             </div>
             <div class="job bglogo" style="background-image: url(img/optum_opac_small.png)">
@@ -144,6 +143,7 @@
                 </div>
                 <div class='desc'>
                     <p>Shadowed various mentors throughout team, learning about common business tech practices and Agile methodologies. Worked with a team of interns to research and present a solution for team collaboration software still in use on the team today.</p>
+					<p>Created technological idea with team of interns for a solution to reaching out to the public more by creating an interactive website demo. Pitched this idea to business and technology executives.</p>
                 </div>
             </div>
             <div class="job bglogo" style="background-image: url(img/isu_opac.png)">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class='desc'>
-                    <p></p>
+                    <p>Was a constant resource for students needing help in Computer Science courses. Split up and delegated roles to other TAs to more efficiently and effectively help students. Stayed in contact with Computer Science department along with professors to improve quality of assignments and lectures.</p>
                 </div>
             </div>
             <!--
