add nature touch

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h3>Whiteboard With Friends</h3>
 					<i class="fa fa-code-fork" aria-hidden="true"></i>
                 </a>
-				<p>Whiteboard With Firends is a web app I started development on with my roommate at the time when I was first learning web development. This is a social networking site in which users create their own "whiteboards" where friends of theirs can draw on them and collaborate in making art with each other.</p>
+				<p>Whiteboard With Friends is a web app I started development on with my roommate at the time when I was first learning web development. This is a social networking site in which users create their own "whiteboards" where friends of theirs can draw on them and collaborate in making art with each other.</p>
 				<p>We started this as a school project using AngularJS and a PHP backend but once the class was over the school-provided servers were wiped clean. After learning a bit more about full stack development, I resurrected it and have been working alone on it, using python Flaskr framework in collaboration with Heroku for deployment purposes in a new repo: 
 					<a href="https://github.com/jsogard/whiteboard-with-friends-py">
 						Whiteboard With Friends 2
