update for new job at OPtum with new resume

--- a/index.html
+++ b/index.html
@@ -112,13 +112,30 @@
         
 		<!-- JOB EXPERIENCE -->
         <div class="content" id="experience">
+            
+            <div class="job bglogo" style="background-image: url(img/optum_opac_small.png)">
+                <div class='job-about'>
+                    <div class='job-stats'>
+                        <h3 class='title'>Full Stack Developer/QA Automation Engineer</h3>
+                        <h4 class='company'>UnitedHealth Group - Optum</h4>
+                        <p class='timespan'>October 2018 - present</p>
+                    </div>
+                    <div class='job-logo-div'>
+                        <img src="/img/uhg.png" class='logo' style="height:90px;">
+                    </div>
+                </div>
+                <div class='desc'>
+                    <p>Worked with team to design, develop, and test a new full-stack web project from the ground up. Our team was tasked to create a fully functional web app for insurance brokers aimed at selling plans to small companies. Planning the project involved gathering requirements, creating wireframes andmockups, assessing security, and prioritizing business needs. My technical roles blurred throughout development, consisting of UI/UX design + development, database design, distributed microservice implementation, and automated testing creation</p>
+                    <p>Our team was specially chosen by executive leadership as a rapid delivery team to help create another insurance selling web portal for larger companies. Our team worked with several others tasked to create a fully functional web application in 4 weeks.</p>
+                </div>
+            </div>
 			
 			<div class="job">
                 <div class='job-about'>
                     <div class='job-stats'>
                         <h3 class='title'>Software Engineer</h3>
                         <h4 class='company'>Innovative Software Engineering</h4>
-                        <p class='timespan'>May 2018 - Present</p>
+                        <p class='timespan'>May 2018 - October 2018</p>
                     </div>
                     <div class='job-logo-div'>
                         <img src="/img/ise.png" class='logo' style="height:90px;">
